infrastructure/k8s/microservices/authentication-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication-service
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - name: authentication-service
          image: kamomillte/authentication-service
          ports:
            - containerPort: 8085
