infrastructure/k8s/microservices/discovery-server-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          image: kamomillte/discovery-server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
      restartPolicy: Always
  serviceName: discovery-server

---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
spec:
  selector:
    app: discovery-server
  ports:
    - name: discovery-server
      port: 8761
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server-lb
spec:
  type: NodePort
  selector:
    app: discovery-server
  ports:
    - port: 80
      targetPort: 8761
