infrastructure/k8s/microservices/feed-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  selector:
    app: feed-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feed-service
  template:
    metadata:
      labels:
        app: feed-service
    spec:
      containers:
        - name: feed-service
          image: kamomillte/feed-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
