infrastructure/k8s/microservices/friends-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: friends-service
spec:
  selector:
    app: friends-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: friends-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: friends-service
  template:
    metadata:
      labels:
        app: friends-service
    spec:
      containers:
        - name: friends-service
          image: kamomillte/friends-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
