infrastructure/k8s/microservices/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      name: gateway
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: kamomillte/gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 8765
  type: LoadBalancer
