infrastructure/k8s/microservices/private-chat-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: private-chat-service
spec:
  selector:
    app: private-chat-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-chat-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: private-chat-service
  template:
    metadata:
      labels:
        app: private-chat-service
    spec:
      containers:
        - name: private-chat-service
          image: kamomillte/private-chat-service
          imagePullPolicy: Always
          resources:
            limits:
              memory: "720Mi"
          ports:
            - containerPort: 8084
