infrastructure/k8s/microservices/user-model-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: user-model-service
spec:
  selector:
    app: user-model-service
  ports:
    - protocol: TCP
      port: 8088
      targetPort: 8088
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-model-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-model-service
  template:
    metadata:
      labels:
        app: user-model-service
    spec:
      containers:
        - name: user-model-service
          image: kamomillte/user-model-service
          ports:
            - containerPort: 8088
