infrastructure/k8s/microservices/user-profile-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: user-profile-service
spec:
  selector:
    app: user-profile-service
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-profile-service
  template:
    metadata:
      labels:
        app: user-profile-service
    spec:
      containers:
        - name: user-profile-service
          image: kamomillte/user-profile-service
          ports:
            - containerPort: 8087
          imagePullPolicy: Always
